--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^5.0.0",
     "prop-types": "latest",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-card-flip": "^1.0.11",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
