--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "lodash.shuffle": "^4.2.0",
     "node-sass": "^5.0.0",
     "prop-types": "latest",
+    "rdndmb-html5-to-touch": "^7.0.0-alpha.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-card-flip": "^1.0.11",
     "react-dnd": "^13.0.0",
     "react-dnd-html5-backend": "^12.1.0",
+    "react-dnd-multi-backend": "^6.0.2",
+    "react-dnd-touch-backend": "^12.0.0",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-scripts": "4.0.1",
