--- a/.github/workflows/pipeline-deploy.yml
+++ b/.github/workflows/pipeline-deploy.yml
@@ -30,6 +30,7 @@ jobs:
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_KEY_PASSPHRASE }}
+          port: 21098
           rm: true
           source: "html/"
           target: "${{ secrets.REMOTE_DIR }}"
