--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "immutability-helper": "^3.1.1",
     "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.2.0",
